Fixed Filter toggling on mobile/tab and desktop version, Added sort by Price Asc/Desc

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -76,7 +76,8 @@
 .add_to_cart{
   background-color: #1e40af;
   width: 100%;
-  height: 49.7px;
+  min-height: 49.7px !important;
+  height: 100% !important;
   color: white;
   font-family: "tkt";
 }
