--- a/src/components/ProductsPage/ProductsPage.css
+++ b/src/components/ProductsPage/ProductsPage.css
@@ -46,10 +46,9 @@
     display: block;
   }
 
-  .flex .for_filter{
+  .flex .for_filter {
     flex-direction: column !important;
   }
-
 
   .Filter {
     position: absolute;
@@ -66,61 +65,24 @@
     display: none;
   }
 
-  .w-3\/4{
-    width: 100%;
-  }
-
-  .w-1\/4{
-    position: absolute;
-        width: 100%;
-        height: 100vh;
-        z-index: 1;
-  }
-
-  .grid-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-/* Filter component styling for tablet */
-@media (min-width: 769px) and (max-width: 1024px) {
-  .filter-toggle-button {
-    display: block;
-  }
-
-  .flex .for_filter{
-    flex-direction: column !important;
-  }
-
-  .Filter {
-    position: absolute;
-    width: 100% !important;
-    top: 60px; /* Adjust based on your header height */
-    left: 0;
-    right: 0;
-    background: white;
-    z-index: 10;
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-  .Filter.hidden {
-    display: none;
-  }
-
   .w-3\/4 {
     width: 100%;
   }
 
   .w-1\/4 {
     position: absolute;
-        width: 100%;
-        height: 100vh;
-        z-index: 1;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+  }
+
+  .grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
+
 
 
 
